edit align pick

--- a/rock-paper-scissors/styles/Home.module.scss
+++ b/rock-paper-scissors/styles/Home.module.scss
@@ -485,7 +485,7 @@
     justify-content: space-between;
     align-self: baseline;
     span {
-      align-self: baseline;
+      align-self: flex-start;
     }
   }
 }
