--- a/todo-list/styles/Home.module.scss
+++ b/todo-list/styles/Home.module.scss
@@ -69,7 +69,7 @@
   ::-webkit-input-placeholder,
   :-ms-input-placeholder,
   :-moz-placeholder,
-  ::-moz-placeholder  {
+  ::-moz-placeholder {
     color: #65677c;
   }
 }
@@ -115,7 +115,7 @@
   ::-webkit-input-placeholder,
   :-ms-input-placeholder,
   :-moz-placeholder,
-  ::-moz-placeholder  {
+  ::-moz-placeholder {
     color: #efeff1;
   }
 }
@@ -160,7 +160,6 @@
     width: inherit;
     outline: none;
     border: 0;
-    background-color: transparent;
   }
 }
 
@@ -291,6 +290,11 @@
   .todo {
     margin-top: 1.5rem;
     font-size: 16px;
+    input,
+    input:focus,
+    input:active {
+      font-size: 16px;
+    }
   }
   .inputTodo,
   .menuTodo,
@@ -344,6 +348,10 @@
   .todo {
     margin-top: 1rem;
     font-size: 14px;
+    input,
+    input:focus {
+      font-size: 14px;
+    }
   }
   .inputTodo,
   .menuTodo,
