--- a/todo-list/styles/globals.css
+++ b/todo-list/styles/globals.css
@@ -2,15 +2,16 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: 'Josefin Sans', -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: "Josefin Sans", -apple-system, BlinkMacSystemFont, Segoe UI,
+    Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue,
+    sans-serif;
 }
 ::placeholder,
 ::-webkit-input-placeholder,
 :-ms-input-placeholder,
 :-moz-placeholder,
 ::-moz-placeholder {
-  font-family: 'Josefin Sans', Arial, Helvetica, sans-serif;
+  font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
 }
 
 a {
@@ -22,4 +23,22 @@ a {
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap');
+input,
+input:focus,
+input:focus-visible,
+input:focus-within,
+input:active,
+input:visited {
+  background: transparent;
+  font-family: "Josefin Sans", Arial, Helvetica, sans-serif;
+}
+
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active  {
+  transition: background-color 5000s;
+  -webkit-text-fill-color: #fff !important;
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&display=swap");
